@@ -9,6 +9,7 @@ Changes in progress
 - Reactor: Fixed bug with right column size if only right column is enabled (Trello #1185)
 - Reactor: Fixed bug with icon in last card (Trello #1187)
 - Reactor: Fixed bug getting multiple categories posts from URL (Trello #1142)
+- Reactor: Minor improvements in CSS
 - Disabled asynchronous default cron because there's an hourly system cron (Trello #1112)
 - xtec-ldap-login: Any existing user whose e-mail is XTEC, will always log in through LDAP if it is activated (Trello #1105)
 - mu-common: Avoid delete page_on_front because frontpage is not shown if it doesnt exist (Trello #1178)
